# chessboard-creator

./: CMakeLists.txt  ChessBoardCreator.cpp  ChessBoardCreator.h  README.md
cmake-modules/: Findlibps.cmake
